--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
        <input class="controls" type="text" name="apellidos" id="apellidos" placeholder="  Apellidos" required>
        <input class="controls" type="text" name="movil" id="movil" placeholder="  Teléfono móvil" required>
        <input class="controls" type="email" name="correo" id="correo" placeholder="  Correo electrónico"required>
-       <input class="controls" type="password" name="direccion" id="Direccion" placeholder="  Contraseña nueva"required>
+       <input class="controls" type="password" name="direccion" id="Direccion" placeholder="  Contraseña"required>
 
          <p><a<div class="z">
     Estoy de acuerdo con<a href="https://www.bancounion.com/wps/wcm/connect/bancounion/404b3627-1e4f-44c0-8277-befbfdfb86dc/T%C3%89RMINO%2BDE%2BUSO%2BDEL%2BCANAL%2BDE%2BGIROS%2BY%2BFINANZAS%2B%281%29.pdf?MOD=AJPERES&CACHEID=ROOTWORKSPACE.Z18_JG94HO40NGHTC068N5QRH11000-404b3627-1e4f-44c0-8277-befbfdfb86dc-obCF.Mo"target="_blank">&nbsp;Terminos y Condiciones</a></a<div></p>
