--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="estyle.css">
-  <title>Préstamos en Línea y Créditos Rápidos | Kredicity</title>
+  <title>Préstamos en Línea y Créditos Rápidos | www.Kredicity.com</title>
   <meta  data-hid="og:description" property="og:description" content="Consigue los mejores préstamos, créditos online y préstamos de dinero. ✅ Sin avales ✅">
   <script language="Javascript"></script>
 
